[gd_scene load_steps=14 format=2]

[ext_resource path="res://monster_!.gd" type="Script" id=1]
[ext_resource path="res://sprites/Monst1-fly.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 13.7161

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 23.5, 10 )

[node name="monster_!" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="monster_1" type="AnimatedSprite" parent="."]
position = Vector2( 0.707031, -0.707169 )
frames = SubResource( 9 )
frame = 4
speed_scale = 2.542
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.353622, -0.353561 )
shape = SubResource( 10 )

[node name="monster_1_bawah" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 25 )
collision_mask = 3

[node name="monster_1_kiri" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 25 )
collision_mask = 3

[node name="monster_1_atas" type="RayCast2D" parent="."]
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 25 )
collision_mask = 3

[node name="monster_1_kanan" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 25 )
collision_mask = 3

[node name="SwitchDirection" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0.5, -0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, 1.5 )
shape = SubResource( 11 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
